--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -1,6 +1,6 @@
 name: MobArena
 main: com.garbagemule.MobArena.MobArena
-version: 0.91.2
+version: 0.92
 softdepend: [MultiVerse]
 commands:
   ma:
@@ -8,22 +8,19 @@ commands:
     usage: |
            /ma join      - Join the arena.
            /ma leave     - Leave the arena.
-           /ma list      - List of players in the arena.
            /ma notready  - List of players who aren't ready.
-           /ma spectator - Warp to the spectator area.
+           /ma spectate  - Warp to the spectator area.
   marena:
     description: Base command for MobArena
     usage: |
            /marena join      - Join the arena.
            /marena leave     - Leave the arena.
-           /marena list      - List of players in the arena.
            /marena notready  - List of players who aren't ready.
-           /marena spectator - Warp to the spectator area.
+           /marena spectate  - Warp to the spectator area.
   mobarena:
     description: Base command for MobArena
     usage: |
            /mobarena join      - Join the arena.
            /mobarena leave     - Leave the arena.
-           /mobarena list      - List of players in the arena.
            /mobarena notready  - List of players who aren't ready.
-           /mobarena spectator - Warp to the spectator area.
+           /mobarena spectate  - Warp to the spectator area.
