--- a/language files/announcements_pirate.properties
+++ b/language files/announcements_pirate.properties
@@ -9,6 +9,7 @@ JOIN_ARENA_NOT_SETUP=Arrrgh! We be missing the top sail!
 JOIN_ARENA_IS_RUNNING=That ship has sailed, landlubber!
 JOIN_ALREADY_PLAYING=Ye be aboard already, ye scurvy dog!
 JOIN_ARG_NEEDED=Which ship are ye boarding? Type /ma arenas for a list, arrgh!
+JOIN_PLAYER_LIMIT_REACHED=Thar be too many men aboard this ship already, landlubber!
 JOIN_EMPTY_INV=Throw ye belongings overboard, scallywag!
 JOIN_STORE_INV_FAIL=Ye belongings didn't fit in the storage deck, arrgh!
 LEAVE_PLAYER_LEFT=Ye abandonned the ship! Arrrgh!
