--- a/language files/announcements_pirate.properties
+++ b/language files/announcements_pirate.properties
@@ -6,11 +6,13 @@ JOIN_NOT_ENABLED=We be swabbing down the decks on all ships, matey.
 JOIN_IN_OTHER_ARENA=Ye're already at sea, scallywag!
 JOIN_ARENA_NOT_ENABLED=We be swabbing down the decks on this ship, matey.
 JOIN_ARENA_NOT_SETUP=Arrrgh! We be missing the top sail!
+JOIN_ARENA_PERMISSION=Arrgh! Ye can't board this ship, scurvy dog!
 JOIN_ARENA_IS_RUNNING=That ship has sailed, landlubber!
 JOIN_ALREADY_PLAYING=Ye be aboard already, ye scurvy dog!
 JOIN_ARG_NEEDED=Which ship are ye boarding? Type /ma arenas for a list, arrgh!
-JOIN_PLAYER_LIMIT_REACHED=Thar be too many men aboard this ship already, landlubber!
+JOIN_TOO_FAR=Ye be too far from the docks, landlubber!
 JOIN_EMPTY_INV=Throw ye belongings overboard, scallywag!
+JOIN_PLAYER_LIMIT_REACHED=Thar be too many men aboard this ship already, landlubber!
 JOIN_STORE_INV_FAIL=Ye belongings didn't fit in the storage deck, arrgh!
 LEAVE_PLAYER_LEFT=Ye abandonned the ship! Arrrgh!
 LEAVE_NOT_PLAYING=Ye're already on land, matey!
@@ -29,6 +31,7 @@ FORCE_END_EMPTY=Thar be no one aboard the ship!
 FORCE_END_IDLE=Arrrgh! Too slow, matey!
 REWARDS_GIVE=Here's ye booty, seadog!
 LOBBY_CLASS_PICKED=Ye be the %!
+LOBBY_CLASS_RANDOM=
 LOBBY_CLASS_PERMISSION=Ye can't use that cutlass, scurvy dog!
 LOBBY_PLAYER_READY=Ready to sail! Arrrgh!
 LOBBY_DROP_ITEM=Don't be sharing ye rum yet, scallywag!
