--- a/language files/announcements_pirate.properties
+++ b/language files/announcements_pirate.properties
@@ -7,6 +7,8 @@ JOIN_IN_OTHER_ARENA=Ye're already at sea, scallywag!
 JOIN_ARENA_NOT_ENABLED=We be swabbing down the decks on this ship, matey.
 JOIN_ARENA_NOT_SETUP=Arrrgh! We be missing the top sail!
 JOIN_ARENA_PERMISSION=Arrgh! Ye can't board this ship, scurvy dog!
+JOIN_FEE_REQUIRED=Ye don't own enough doubloons, matey! Price: %
+JOIN_FEE_PAID=Booty ye gave up to join: %
 JOIN_ARENA_IS_RUNNING=That ship has sailed, landlubber!
 JOIN_ALREADY_PLAYING=Ye be aboard already, ye scurvy dog!
 JOIN_ARG_NEEDED=Which ship are ye boarding? Type /ma arenas for a list, arrgh!
