--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -1,7 +1,7 @@
 name: MobArena
 main: com.garbagemule.MobArena.MobArena
-version: 0.92
-softdepend: [MultiVerse]
+version: 0.93.2
+softdepend: [MultiVerse,XcraftGate]
 commands:
   ma:
     description: Base command for MobArena
