--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="D:/General/Java/Minecraft/lib/craftbukkit-0.0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="D:/General/Java/Minecraft/lib/iCo6.jar"/>
 	<classpathentry kind="lib" path="D:/General/Java/Minecraft/lib/MultiCurrency.jar"/>
+	<classpathentry kind="lib" path="D:/General/Java/Minecraft/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="D:/General/Java/Minecraft/lib/Spout.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
