Added only-on-swarms for MagicSpells

--- a/resources/res/magicspells.yml
+++ b/resources/res/magicspells.yml
@@ -11,3 +11,7 @@ disabled-spells:
 # Spells that will be disabled only while a boss is present.
 disabled-only-on-bosses:
     - purge
+
+# Spells that will be disabled only during swarm waves.
+disabled-only-on-swarms:
+    - purge
