Fixed missing ressources

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: MobArena
 author: prosicraft
 main: com.prosicraft.MobArena.MobArena
-description: Fight against the creeper and his friends.
+description: Fight against the creeper and his friends. Originally by garbagemule
 version: 0.95
 softdepend: [Spout,Permissions,MultiVerse,XcraftGate,Towny,Heroes,MagicSpells]
 commands:
