--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: MobArena
 author: garbagemule
 main: com.garbagemule.MobArena.MobArena
-version: 0.94.4.75
-softdepend: [Spout,MultiVerse,XcraftGate,Towny,Heroes,MagicSpells,Vault]
+version: 0.94.4.77
+softdepend: [Spout,MultiVerse,MultiWorld,XcraftGate,Towny,Heroes,MagicSpells,Vault]
 commands:
     ma:
         description: Base command for MobArena
