--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: MobArena
 author: garbagemule
 main: com.garbagemule.MobArena.MobArena
-version: 0.94.4.93
-softdepend: [Spout,MultiVerse,MultiWorld,XcraftGate,Towny,Heroes,MagicSpells,Vault]
+version: 0.94.4.94
+softdepend: [Spout,MultiVerse-Core,MultiWorld,XcraftGate,Towny,Heroes,MagicSpells,Vault]
 commands:
     ma:
         description: Base command for MobArena
@@ -32,7 +32,7 @@ permissions:
         description: Arena list command
         default: true
     mobarena.use.playerlist:
-        description: Arena list command
+        description: Player list command
         default: true
     
     mobarena.admin:
