Fixed grammar error.

--- a/resources/res/announcements.properties
+++ b/resources/res/announcements.properties
@@ -9,7 +9,7 @@ JOIN_ARENA_NOT_SETUP=This arena has not been set up yet.
 JOIN_ARENA_PERMISSION=You don't have permission to join this arena.
 JOIN_FEE_REQUIRED=Insufficient funds. Price: %
 JOIN_FEE_PAID=Price to join was: %
-JOIN_ARENA_IS_RUNNING=This arena is in already progress.
+JOIN_ARENA_IS_RUNNING=This arena is already in progress.
 JOIN_ALREADY_PLAYING=You are already playing!
 JOIN_ARG_NEEDED=You must specify an arena. Type /ma arenas for a list.
 JOIN_TOO_FAR=You are too far away from the arena to join/spectate.
