Update announcements.properties for zh_TW.

--- a/language files/zh_TW/announcements.properties
+++ b/language files/zh_TW/announcements.properties
@@ -1,4 +1,4 @@
-ARENA_START=開始屠殺吧!
+ARENA_START=開始廝殺吧!
 ARENA_END=競技場已經結束.
 ARENA_DOES_NOT_EXIST=這個競技場不存在. 輸入 /ma arenas 取得清單.
 JOIN_PLAYER_JOINED=玩家加入競技場.
@@ -6,23 +6,23 @@ JOIN_NOT_ENABLED=怪物競技場尚未啟用.
 JOIN_IN_OTHER_ARENA=你已加入了別的競技場! 輸入 /ma leave 來退出.
 JOIN_ARENA_NOT_ENABLED=這個競技場尚未啟用.
 JOIN_ARENA_NOT_SETUP=這個競技場還沒設定好.
-JOIN_ARENA_PERMISSION=你沒有權限加入這個競技場.
-JOIN_FEE_REQUIRED=餘額不足. 花費: %
-JOIN_FEE_PAID=加入的花費為: %
+JOIN_ARENA_PERMISSION=沒有權限加入這個競技場.
+JOIN_FEE_REQUIRED=餘額不足. 費用: %
+JOIN_FEE_PAID=加入的費用為: %
 JOIN_ARENA_IS_RUNNING=這個競技場正在進行中.
 JOIN_ALREADY_PLAYING=你已經在競技場中!
-JOIN_ARG_NEEDED=你必須指定一個競技場. 輸入 /ma arenas 取得清單.
-JOIN_TOO_FAR=你距離競技場太遙遠了以至於無法加入/觀看.
-JOIN_EMPTY_INV=加入競技場前你必須清除身上的物品.
+JOIN_ARG_NEEDED=必須指定一個競技場. 輸入 /ma arenas 取得清單.
+JOIN_TOO_FAR=距離競技場太遙遠以至於無法 加入/觀看.
+JOIN_EMPTY_INV=加入競技場前必須清除身上的物品.
 JOIN_PLAYER_LIMIT_REACHED=這個競技場已經有太多的玩家.
 JOIN_STORE_INV_FAIL=無法儲存個人物品. 請再試一次.
-LEAVE_PLAYER_LEFT=你離開競技場. 感謝你的參與!
+LEAVE_PLAYER_LEFT=離開競技場. 感謝你的參與!
 LEAVE_NOT_PLAYING=你並不在競技場中.
 PLAYER_DIED=% 死亡!
 SPEC_PLAYER_SPECTATE=好好享受這精彩的表演!
 SPEC_NOT_RUNNING=這個競技場尚未開始.
-SPEC_ARG_NEEDED=你必須指定一個競技場. 輸入 /ma arenas 取得清單.
-SPEC_EMPTY_INV=請先清除你身上的物品!
+SPEC_ARG_NEEDED=必須指定一個競技場. 輸入 /ma arenas 取得清單.
+SPEC_EMPTY_INV=請先清除身上的物品!
 SPEC_ALREADY_PLAYING=你無法觀賞自己的表演!
 NOT_READY_PLAYERS=尚未準備好: %
 FORCE_START_STARTED=強制啟動競技場.
@@ -32,20 +32,20 @@ FORCE_END_ENDED=強制結束競技場.
 FORCE_END_EMPTY=沒有人在競技場裡.
 FORCE_END_IDLE=你的動作不夠快!
 REWARDS_GIVE=這些是你的獎賞!
-LOBBY_CLASS_PICKED=你選擇 % 作為職業!
+LOBBY_CLASS_PICKED=選擇 % 作為你的職業!
 LOBBY_CLASS_RANDOM=當競技場開始時你將會隨機獲得一個職業.
-LOBBY_CLASS_PERMISSION=你沒有權限使用這個職業!
+LOBBY_CLASS_PERMISSION=沒有權限使用這個職業!
 LOBBY_PLAYER_READY=你已經準備好了!
-LOBBY_DROP_ITEM=你無法在競技場開始前分享物品!
+LOBBY_DROP_ITEM=無法在競技場開始前分享物品!
 LOBBY_PICK_CLASS=你必須先選擇一個職業!
-LOBBY_RIGHT_CLICK=用滑鼠左鍵點擊告示排.
+LOBBY_RIGHT_CLICK=用滑鼠左鍵點擊告示排而不是右鍵.
 WARP_TO_ARENA=無法在戰鬥時傳送到競技場!
 WARP_FROM_ARENA=這個競技場不允許傳送!
-WAVE_DEFAULT=準備迎戰第 #% 批!
-WAVE_SPECIAL=準備迎戰第 #% 批! [特殊]
-WAVE_REWARD=你獲得獎勵: %
+WAVE_DEFAULT=準備迎戰第 #% 批怪物!
+WAVE_SPECIAL=準備迎戰第 #% 批怪物! [特殊]
+WAVE_REWARD=獲得獎勵: %
 MISC_LIST_ARENAS=可加入的競技場: %
 MISC_LIST_PLAYERS=已加入的玩家: %
-MISC_COMMAND_NOT_ALLOWED=你無法在競技場使用這個指令!
-MISC_NO_ACCESS=你無權使用這個指令.
+MISC_COMMAND_NOT_ALLOWED=無法在競技場使用這個指令!
+MISC_NO_ACCESS=無權使用這個指令.
 MISC_NONE=<none>
